images on mobile fixes

--- a/app/styles/application.styl
+++ b/app/styles/application.styl
@@ -350,6 +350,9 @@ section.center
               margin 7px 0 30px 0
                 // font-size rem(105px)
                 // line-height rem(93px)
+            p
+              font-size rem(13px)
+              line-height rem(14px)
         div.main-text.home
             position relative
             column(8/12)
